# incognito-program

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  rust-toolchain.toml  tsconfig.json
programs/incognito_program/: Cargo.toml
programs/incognito_program/src/: lib.rs  verifying_key.rs  verifying_key_v2.rs
tests/: v1_withdraw.test.ts  v2_spend_with_change.test.ts  v2_token2022_deposit.test.ts
tests/fixtures/: spend_with_change_v2_fixture.json  withdraw_v1_fixture.json
